<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_above="@+id/toolbarDialogActions"
    android:gravity="center_horizontal"
    android:paddingTop="@dimen/dialog_padding"
    android:paddingBottom="@dimen/dialog_padding">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:text="@string/date_range_label"
      android:id="@+id/textView"
      android:layout_gravity="center_horizontal"
      />

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/row_spacing">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/from"
        android:id="@+id/tvBeginDateLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/anytime"
        android:id="@+id/tvBeginDateLink"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tvBeginDateLabel"
        android:layout_toEndOf="@+id/tvBeginDateLabel"
        android:layout_marginLeft="@dimen/text_spacing"
        style="@style/filterLink"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/to"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvBeginDateLink"
        android:layout_toEndOf="@+id/tvBeginDateLink"
        android:layout_marginLeft="@dimen/from_to_distance"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/anytime"
        android:id="@+id/tvEndDateLink"
        android:paddingLeft="5dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        style="@style/filterLink"/>
    </RelativeLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:text="@string/sort_by"
      android:id="@+id/tvSortLabel"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/row_spacing_large"/>

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/row_spacing">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/newest"
        android:id="@+id/tvSortByLink"
        android:layout_centerVertical="true"
        style="@style/filterLink"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first"
        android:id="@+id/tvFirstLabel"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvSortByLink"
        android:layout_toEndOf="@+id/tvSortByLink"
        android:layout_marginLeft="@dimen/text_spacing"/>

    </RelativeLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:text="@string/news_desk_categories_label"
      android:id="@+id/tv"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/row_spacing_large"/>

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts_checkbox_label"
        android:id="@+id/cbArts"
        android:checked="false"
        android:buttonTint="@color/colorPrimary"
        style="@style/checkbox"/>

      <CheckBox
        style="@style/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion_checkbox_label"
        android:id="@+id/cbFashion"
        android:checked="false"
        android:buttonTint="@color/colorPrimary"
        android:layout_below="@+id/cbArts"/>

      <CheckBox
        style="@style/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports_checkbox_label"
        android:id="@+id/cbSports"
        android:checked="false"
        android:buttonTint="@color/colorPrimary"
        android:layout_below="@+id/cbFashion"/>
    </RelativeLayout>

  </LinearLayout>

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbarDialogActions"
    android:minHeight="?attr/actionBarSize"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/ToolbarTheme"
    app:titleTextAppearance="@style/Toolbar.TitleText"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    android:background="@color/colorPrimary"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true">

    <ScrollView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
      <LinearLayout
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <Button
          android:id="@+id/btnFilterCancel"
          android:layout_width="fill_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/cancel"
          style="@style/TextButton"/>

        <Button
          android:id="@+id/btnFilterSave"
          android:layout_width="fill_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/ok"
          style="@style/TextButton" />
      </LinearLayout>
    </ScrollView>


  </android.support.v7.widget.Toolbar>

</RelativeLayout>
